bindings/c/whiteout_casc.h

/* ── Owned string list ───────── */

typedef struct whiteout_StringList whiteout_StringList;
/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_CascCreateOptions whiteout_CascCreateOptions;
typedef struct whiteout_CascWriteOptions whiteout_CascWriteOptions;
typedef struct whiteout_CascStorage whiteout_CascStorage;
typedef struct whiteout_CascStorageWritable whiteout_CascStorageWritable;
/* ── CascStorage ─────────────────────────────────────────────── */

/* Unified read-only CASC storage (local disk or CDN) */
/*  */
/* Storage is the primary entry point for reading CASC archives. Use `open()` for local disk, `openOnline()` for CDN-backed access. The same public read API works identically regardless of backing store. */
/*  */
/* All public methods are thread-safe: read operations acquire a shared lock. */
/*  */
/* Uses the PImpl (Pointer to Implementation) idiom to hide internals. */
/*  */
/* @see StorageWritable for write + persist operations. */
void whiteout_casc_CascStorage_delete(whiteout_CascStorage* self);
/* Open an existing local CASC storage. @param path Path to the game's top-level directory (containing .build.info) or its Data subdirectory. @param pool Optional WorkerPool for parallel I/O (non-owning). @return A valid Storage, or std::nullopt on failure. */
struct whiteout_CascStorage* whiteout_casc_CascStorage_open(const char* path, void* pool);
/* @overload Open with locale mask. */
struct whiteout_CascStorage* whiteout_casc_CascStorage_open_path_localeMask_pool(const char* path, uint32_t localeMask, void* pool);
/* @overload Open a specific product from a multi-product `.build.info`. @param product Product code selecting the build, e.g. "w3" (Warcraft III retail) vs "w3t" (its PTR). Matched case-insensitively against the active builds; empty selects the first active build. See OpenOptions::product. Open fails if the product has no active build. */
struct whiteout_CascStorage* whiteout_casc_CascStorage_open_path_product_pool(const char* path, const char* product, void* pool);
/* @return True if this storage reads from local disk. */
int32_t whiteout_casc_CascStorage_isLocal(const whiteout_CascStorage* self);
/* @return True if this storage reads from CDN. */
int32_t whiteout_casc_CascStorage_isOnline(const whiteout_CascStorage* self);
/* @return True if this storage has a write overlay (StorageWritable). */
int32_t whiteout_casc_CascStorage_isWritable(const whiteout_CascStorage* self);
/* @return The root manifest format, or RootFormat::Unknown. */
int32_t whiteout_casc_CascStorage_rootFormat(const whiteout_CascStorage* self);
/* @return File contents, or std::nullopt if the path is not found. */
whiteout_Bytes whiteout_casc_CascStorage_readFile(const whiteout_CascStorage* self, const char* cascPath);
/* @overload Read a file by path with locale and open flags. */
whiteout_Bytes whiteout_casc_CascStorage_readFile_cascPath_localeFlags_openFlags(const whiteout_CascStorage* self, const char* cascPath, uint32_t localeFlags, uint32_t openFlags);
/* @overload Read a file by WoW-style FileDataId. */
whiteout_Bytes whiteout_casc_CascStorage_readFile_fileId_hint(const whiteout_CascStorage* self, int32_t fileId, int32_t hint);
/* @overload Read a file by FileDataId with locale and open flags. */
whiteout_Bytes whiteout_casc_CascStorage_readFile_fileId_localeFlags_openFlags_hint(const whiteout_CascStorage* self, int32_t fileId, uint32_t localeFlags, uint32_t openFlags, int32_t hint);
/* @return True if the path resolves to a known file. */
int32_t whiteout_casc_CascStorage_fileExists(const whiteout_CascStorage* self, const char* cascPath);
/* @overload Check existence by FileDataId. */
int32_t whiteout_casc_CascStorage_fileExists_fileId_hint(const whiteout_CascStorage* self, int32_t fileId, int32_t hint);
/* @return Uncompressed file size, or std::nullopt if not found. */
int32_t whiteout_casc_CascStorage_fileSize(const whiteout_CascStorage* self, const char* cascPath, uint64_t* out_value);
/* @overload */
int32_t whiteout_casc_CascStorage_fileSize_fileId_hint(const whiteout_CascStorage* self, int32_t fileId, int32_t hint, uint64_t* out_value);
/* @return All known file paths. */
size_t whiteout_casc_CascStorage_listFiles_count(const whiteout_CascStorage* self);
whiteout_CString whiteout_casc_CascStorage_listFiles_at(const whiteout_CascStorage* self, size_t index);
/* Materialises the whole list in one call. Prefer this over the
 * _count/_at pair above, which re-runs the query per index. */
struct whiteout_StringList* whiteout_casc_CascStorage_listFiles(const whiteout_CascStorage* self);
/* @return All entries with metadata. */
/* Materialises the whole list once; the snapshot is queried by
 * index and must be released with _free. */
void* whiteout_casc_CascStorage_listEntries_snapshot(const whiteout_CascStorage* self);
size_t whiteout_casc_CascStorage_listEntries_count(void* snapshot);
whiteout_Bytes whiteout_casc_CascStorage_listEntries_cKey_at(void* snapshot, size_t index);
uint64_t whiteout_casc_CascStorage_listEntries_fileSize_at(void* snapshot, size_t index);
uint32_t whiteout_casc_CascStorage_listEntries_localeFlags_at(void* snapshot, size_t index);
uint32_t whiteout_casc_CascStorage_listEntries_contentFlags_at(void* snapshot, size_t index);
int32_t whiteout_casc_CascStorage_listEntries_fileDataId_at(void* snapshot, size_t index);
whiteout_CString whiteout_casc_CascStorage_listEntries_path_at(void* snapshot, size_t index);
void whiteout_casc_CascStorage_listEntries_free(void* snapshot);
/* @return Total number of files in the root manifest. */
int32_t whiteout_casc_CascStorage_totalFileCount(const whiteout_CascStorage* self, uint32_t* out_value);
/* Import encryption keys from a formatted string (one per line). */
int32_t whiteout_casc_CascStorage_importKeysFromString(whiteout_CascStorage* self, const char* keyList);
/* Import encryption keys from a file. */
int32_t whiteout_casc_CascStorage_importKeysFromFile(whiteout_CascStorage* self, const char* keyFilePath);
/* Substitute zeros for any frame whose encryption key is unavailable, instead of failing the read. Off by default. */
/*  */
/* Unreleased content ships encrypted with keys that are not published, and a single such frame otherwise takes a whole file with it — a client database that is 99% readable is worth more than none of it. CascLib spells this CASC_OVERCOME_ENCRYPTED. Turn it on only where a partly blank file is more useful than no file. */
void whiteout_casc_CascStorage_setZeroFillEncrypted(whiteout_CascStorage* self, int32_t on);
/* @return The encryption key for @p keyName, or std::nullopt if not found. */
int32_t whiteout_casc_CascStorage_findEncryptionKey(const whiteout_CascStorage* self, uint64_t keyName, uint8_t* out_value);
/* Clear the in-memory decoded-data cache (container cache). */
void whiteout_casc_CascStorage_flushCache(whiteout_CascStorage* self);
/* Force every deferred load (encoding, root, VFS, index files, orphan bitvector) to resolve. Idempotent. */
int32_t whiteout_casc_CascStorage_prefetch(whiteout_CascStorage* self);
/* @return Last error code (thread-local). */
uint32_t whiteout_casc_CascStorage_lastError(void);
/* ── CascStorageWritable ─────────────────────────────────────────────── */

/* Writable CASC storage (read + write + save) */
/*  */
/* Inherits all read operations from Storage. Adds write overlay and persist-to-disk support. */
/*  */
/* Only local-backed storages can be writable (CDN is read-only). */
/*  */
/* extends=whiteout::storages::casc::Storage */
void whiteout_casc_CascStorageWritable_delete(whiteout_CascStorageWritable* self);
/* Create a new empty storage in memory. */
/*  */
/* No file is written to disk until save() is called. */
/*  */
/* @param opts Creation options (product name, version, root format). @param pool Optional WorkerPool for parallel I/O. @return A valid empty StorageWritable ready for writeFile() calls. */
struct whiteout_CascStorageWritable* whiteout_casc_CascStorageWritable_create(struct whiteout_CascCreateOptions* opts, void* pool);
/* Reserve a file-data-ID for a named asset. */
/*  */
/* Allocates the next available file-data-ID and associates it with @p name.  The interpretation of @p name depends on the root format: */
/*  */
/* - **WoW / WoWTvfs**: @p name is a full CASC path (e.g. `"Base\\creatures\\beast\\beast.m2"`). - **Diablo 3 / Diablo 4 / TVFS**: @p name is `"asset_name.ext"`, where the extension determines the SNO group.  A CoreTOC entry is created automatically. */
/*  */
/* Returns @c std::nullopt if the name already exists in the root or in a previous reservation. */
/*  */
/* @code auto id = storage.reserveFileId("my_beast.app"); if (id) storage.writeFile(*id, data); @endcode */
int32_t whiteout_casc_CascStorageWritable_reserveFileId(whiteout_CascStorageWritable* self, const char* name, uint32_t* out_value);
/* Write a file by path. */
/*  */
/* Data is stored in an in-memory overlay until save() is called. */
/*  */
/* @param path CASC path for the new or updated file. @param data File contents. @param opts Write options (locale, content flags, compression). @return True on success. */
int32_t whiteout_casc_CascStorageWritable_writeFile(whiteout_CascStorageWritable* self, const char* path, const uint8_t* data, size_t data_size, struct whiteout_CascWriteOptions* opts);
/* @overload Write a file by FileDataId. */
int32_t whiteout_casc_CascStorageWritable_writeFile_fileId_data_opts_hint(whiteout_CascStorageWritable* self, int32_t fileId, const uint8_t* data, size_t data_size, struct whiteout_CascWriteOptions* opts, int32_t hint);
/* Mark a file for deletion (effective on next save). */
int32_t whiteout_casc_CascStorageWritable_deleteFile(whiteout_CascStorageWritable* self, const char* path);
/* @overload */
int32_t whiteout_casc_CascStorageWritable_deleteFile_fileId_hint(whiteout_CascStorageWritable* self, int32_t fileId, int32_t hint);
/* Persist all pending changes to disk (writes to the original location). */
int32_t whiteout_casc_CascStorageWritable_save(whiteout_CascStorageWritable* self);
/* @overload Persist to a specific output path. */
int32_t whiteout_casc_CascStorageWritable_save_path(whiteout_CascStorageWritable* self, const char* path);