bindings/java/src/main/java/whiteout/casc/internal/Native.java


    // -- CascStorage --
    public static final MethodHandle whiteout_casc_CascStorage_delete = find(
        "whiteout_casc_CascStorage_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_open = find(
        "whiteout_casc_CascStorage_open", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_open_path_localeMask_pool = find(
        "whiteout_casc_CascStorage_open_path_localeMask_pool", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_open_path_product_pool = find(
        "whiteout_casc_CascStorage_open_path_product_pool", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_isLocal = find(
        "whiteout_casc_CascStorage_isLocal", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_isOnline = find(
        "whiteout_casc_CascStorage_isOnline", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_isWritable = find(
        "whiteout_casc_CascStorage_isWritable", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_rootFormat = find(
        "whiteout_casc_CascStorage_rootFormat", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_readFile = find(
        "whiteout_casc_CascStorage_readFile", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_readFile_cascPath_localeFlags_openFlags = find(
        "whiteout_casc_CascStorage_readFile_cascPath_localeFlags_openFlags", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_casc_CascStorage_readFile_fileId_hint = find(
        "whiteout_casc_CascStorage_readFile_fileId_hint", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_casc_CascStorage_readFile_fileId_localeFlags_openFlags_hint = find(
        "whiteout_casc_CascStorage_readFile_fileId_localeFlags_openFlags_hint", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_casc_CascStorage_fileExists = find(
        "whiteout_casc_CascStorage_fileExists", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_fileExists_fileId_hint = find(
        "whiteout_casc_CascStorage_fileExists_fileId_hint", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_casc_CascStorage_fileSize = find(
        "whiteout_casc_CascStorage_fileSize", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_fileSize_fileId_hint = find(
        "whiteout_casc_CascStorage_fileSize_fileId_hint", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_listFiles_count = find(
        "whiteout_casc_CascStorage_listFiles_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_listFiles_at = find(
        "whiteout_casc_CascStorage_listFiles_at", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_casc_CascStorage_listFiles = find(
        "whiteout_casc_CascStorage_listFiles", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_listEntries_snapshot = find(
        "whiteout_casc_CascStorage_listEntries_snapshot", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_listEntries_count = find(
        "whiteout_casc_CascStorage_listEntries_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_listEntries_cKey_at = find(
        "whiteout_casc_CascStorage_listEntries_cKey_at", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_casc_CascStorage_listEntries_fileSize_at = find(
        "whiteout_casc_CascStorage_listEntries_fileSize_at", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_casc_CascStorage_listEntries_localeFlags_at = find(
        "whiteout_casc_CascStorage_listEntries_localeFlags_at", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_casc_CascStorage_listEntries_contentFlags_at = find(
        "whiteout_casc_CascStorage_listEntries_contentFlags_at", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_casc_CascStorage_listEntries_fileDataId_at = find(
        "whiteout_casc_CascStorage_listEntries_fileDataId_at", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_casc_CascStorage_listEntries_path_at = find(
        "whiteout_casc_CascStorage_listEntries_path_at", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_casc_CascStorage_listEntries_free = find(
        "whiteout_casc_CascStorage_listEntries_free", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_totalFileCount = find(
        "whiteout_casc_CascStorage_totalFileCount", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_importKeysFromString = find(
        "whiteout_casc_CascStorage_importKeysFromString", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_importKeysFromFile = find(
        "whiteout_casc_CascStorage_importKeysFromFile", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_setZeroFillEncrypted = find(
        "whiteout_casc_CascStorage_setZeroFillEncrypted", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_casc_CascStorage_findEncryptionKey = find(
        "whiteout_casc_CascStorage_findEncryptionKey", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_casc_CascStorage_flushCache = find(
        "whiteout_casc_CascStorage_flushCache", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_prefetch = find(
        "whiteout_casc_CascStorage_prefetch", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorage_lastError = find(
        "whiteout_casc_CascStorage_lastError", FunctionDescriptor.of(ValueLayout.JAVA_INT));

    // -- CascStorageWritable --
    public static final MethodHandle whiteout_casc_CascStorageWritable_delete = find(
        "whiteout_casc_CascStorageWritable_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorageWritable_create = find(
        "whiteout_casc_CascStorageWritable_create", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorageWritable_reserveFileId = find(
        "whiteout_casc_CascStorageWritable_reserveFileId", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorageWritable_writeFile = find(
        "whiteout_casc_CascStorageWritable_writeFile", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorageWritable_writeFile_fileId_data_opts_hint = find(
        "whiteout_casc_CascStorageWritable_writeFile_fileId_data_opts_hint", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_casc_CascStorageWritable_deleteFile = find(
        "whiteout_casc_CascStorageWritable_deleteFile", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorageWritable_deleteFile_fileId_hint = find(
        "whiteout_casc_CascStorageWritable_deleteFile_fileId_hint", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_casc_CascStorageWritable_save = find(
        "whiteout_casc_CascStorageWritable_save", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascStorageWritable_save_path = find(
        "whiteout_casc_CascStorageWritable_save_path", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

}
